# usersim

./: .gitignore  AGENTS.md  CLAUDE_SETUP.md  QUICKSTART.md  README.md  SKILL.md  TESTING.md  VISION.md  pyproject.toml  usersim.yaml
.claude/: settings.json  settings.local.json
.claude/skills/: SKILL.md
dogfood/: constraint_library.py  instrumentation.py  perceptions.py  usersim.yaml
dogfood/users/: ci_engineer.py  compliance_auditor.py  constraint_health_auditor.py  devex_engineer.py  devops_engineer.py  first_time_user.py  library_consumer.py  ml_engineer.py  oss_contributor.py  persona_author.py  product_manager.py  qa_engineer.py  researcher.py  security_engineer.py  sre_engineer.py  tech_writer.py
examples/agent-convergence/: README.md  run_agent.py  usersim.yaml
examples/always-fails/: instrumentation.py  perceptions.py  usersim.yaml
examples/data-processor/: README.md  instrumentation.py  perceptions.py  processor.py  usersim.yaml
examples/graph-viz/: instrumentation.js  perceptions.py  usersim.yaml
examples/local-notes/: METRICS.md  usersim.yaml
research/: AGENT_HOOK_STACK.md  CONSTRAINT_DESIGN.md  EXISTING_TOOLING_COMPARISON.md  FINDINGS.md  FORMAL_METHODS_COMPARISON.md  SCENARIOS_AND_CONSTRAINT_HEALTH.md  VISION_CONVERGENCE.md  lighthouse_lcp.js  lighthouse_scoring.js
tests/: test_constraint_library.py  test_core.py  test_examples.py
usersim/: __init__.py  audit.py  calibrate.py  cli.py  runner.py  scaffold.py  schema.py
usersim/constraints/: __init__.py  cli.py  privacy.py  reliability.py  retention.py  search.py  throughput.py
(+47 files in other folders)
